--- a/portfolio.html
+++ b/portfolio.html
@@ -246,7 +246,17 @@
                         </a>
                     </li>
                 </ul>
-    
+            </div>
+
+            <div class="footer-subscribe">
+                <p class="footer-media-text">Subscribe</p>
+                <input type="text" name="user-name" id="user-name" class="subscribe-input" placeholder="E-mail" />
+                <button class="subscribe-button">
+                    Subscribe
+                    <svg class="footer-subscribe-icon" width="24" height="20">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                  </button>        
             </div>
         </div>
     </footer>
