--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 <div class="form-field">
                     <label for="user-name" class="form-text-04">Name</label>
                     <input type="text" name="user-name" id="user-name" class="form-frame" />
-                    <svg class="form-icon" width="12" height="12">
+                    <svg class="form-icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-person"></use>
                     </svg>
                 </div>
@@ -431,7 +431,7 @@
                 <div class="form-field">
                     <label for="phone" class="form-text-01">Phone</label>
                     <input type="text" name="phone" id="phone" class="form-frame" />
-                    <svg class="form-icon" width="13" height="13">
+                    <svg class="form-icon" width="17" height="17">
                         <use href="./images/icons.svg#icon-phone"></use>
                     </svg>
                 </div>
@@ -439,7 +439,7 @@
                 <div class="form-field">
                     <label for="email" class="form-text-01">Email</label>
                     <input type="text" name="email" id="email" class="form-frame" />
-                    <svg class="form-icon" width="12" height="12">
+                    <svg class="form-icon" width="19" height="19">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
                 </div>
@@ -450,7 +450,8 @@
                 </div>
 
                 <div class="checkbox-line">
-                    <input type="checkbox" name="" value="" id="consent" />
+                    <input class="checkbox" type="checkbox" name="" value="" id="consent" />
+                    <span class="checkbox-custom"></span>
                     <label for="consent" class="form-text-checkbox">I accept the terms and conditions of the <a href="'" class="privacy-policy">Privacy Policy</a></label>
                 </div>
 
