--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
             <div class="footer-subscribe">
                 <p class="footer-media-text">Subscribe</p>
-                <input type="text" name="user-name" id="user-name" class="subscribe-input" placeholder="E-mail"/>
+                <input type="text" name="user-e-mail" id="e-mail" class="subscribe-input" placeholder="E-mail">
                 <button class="subscribe-button">
                     Subscribe
                     <svg class="footer-subscribe-icon" width="24" height="20">
@@ -422,26 +422,42 @@
             <form>
                 <div class="form-field">
                     <label for="user-name" class="form-text-04">Name</label>
-                    <input type="text" name="user-name" id="user-name" class="form-frame" />
-                    <svg class="form-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-person"></use>
-                    </svg>
+                    <div class="form-icon-relative">
+                        <input type="text" name="user-name" id="user-name" class="form-frame" >
+                        <svg class="form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-person"></use>
+                         </svg>
+                    </div>
                 </div>
 
                 <div class="form-field">
                     <label for="phone" class="form-text-01">Phone</label>
-                    <input type="text" name="phone" id="phone" class="form-frame" />
-                    <svg class="form-icon" width="17" height="17">
-                        <use href="./images/icons.svg#icon-phone"></use>
-                    </svg>
+                    <div class="form-icon-relative">
+                        <input 
+                            type="text" 
+                            name="phone" 
+                            id="phone" 
+                            class="form-frame" 
+                        >
+                        <svg class="form-icon" width="17" height="17">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
                 </div>
 
                 <div class="form-field">
                     <label for="email" class="form-text-01">Email</label>
-                    <input type="text" name="email" id="email" class="form-frame" />
-                    <svg class="form-icon" width="19" height="19">
-                        <use href="./images/icons.svg#icon-email"></use>
-                    </svg>
+                    <div class="form-icon-relative">
+                        <input 
+                            type="text" 
+                            name="email" 
+                            id="email" 
+                            class="form-frame" 
+                        >
+                        <svg class="form-icon" width="19" height="19">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
                 </div>
 
                 <div  class="form-field">
@@ -450,16 +466,14 @@
                 </div>
 
                 <div class="checkbox-line">
-                    <input class="checkbox" type="checkbox" name="" value="" id="consent" />
+                    <input class="checkbox" type="checkbox" name="consent" value="" id="consent" >
                     <span class="checkbox-custom"></span>
                     <label for="consent" class="form-text-checkbox">I accept the terms and conditions of the <a href="'" class="privacy-policy">Privacy Policy</a></label>
                 </div>
 
-                <button tipe="submit" class="modal-send">Send</button>
+                <button type="submit" class="modal-send">Send</button>
             </form>
-            
+        </div>
     </div>
     <script src="./js/modal.js"></script>
 </body>
-
-</html>
