--- a/portfolio.html
+++ b/portfolio.html
@@ -250,7 +250,7 @@
 
             <div class="footer-subscribe">
                 <p class="footer-media-text">Subscribe</p>
-                <input type="text" name="user-name" id="user-name" class="subscribe-input" placeholder="E-mail" />
+                <input type="text" name="user-name" id="user-name" class="subscribe-input" placeholder="E-mail" >
                 <button class="subscribe-button">
                     Subscribe
                     <svg class="footer-subscribe-icon" width="24" height="20">
